added social meta tags and image

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Een selectie van projecten uit het portfolio van Gilles Vermeulen, creative developer.">
+  
   <title>Gilles Vermeulen - Creative Developer</title>
+
+  <meta name="description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
+  <meta name="image" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta itemprop="name" content="Gilles Vermeulen - Creative Developer">
+  <meta itemprop="description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
+  <meta itemprop="image" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Gilles Vermeulen - Creative Developer">
+  <meta name="twitter:description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
+  <meta name="twitter:creator" content="@GillesVermeulen">
+  <meta name="twitter:image:src" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta name="og:title" content="Gilles Vermeulen - Creative Developer">
+  <meta name="og:description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
+  <meta name="og:image" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta name="og:site_name" content="Gilles Vermeulen - Creative Developer">
+  <meta name="og:locale" content="nl_BE">
+  <meta name="og:type" content="website">
+
   <link rel="stylesheet" href="style.css" inline>
 </head>
 <body>
