--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,12 @@
   <meta name="twitter:description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
   <meta name="twitter:creator" content="@GillesVermeulen">
   <meta name="twitter:image:src" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
-  <meta name="og:title" content="Gilles Vermeulen - Creative Developer">
-  <meta name="og:description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
-  <meta name="og:image" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
-  <meta name="og:site_name" content="Gilles Vermeulen - Creative Developer">
-  <meta name="og:locale" content="nl_BE">
-  <meta name="og:type" content="website">
+  <meta property="og:title" content="Gilles Vermeulen - Creative Developer">
+  <meta property="og:description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
+  <meta property="og:image" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta property="og:site_name" content="Gilles Vermeulen - Creative Developer">
+  <meta property="og:locale" content="nl_BE">
+  <meta property="og:type" content="website">
 
   <link rel="stylesheet" href="style.css" inline>
 </head>
