added og:url tag

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
   <meta property="og:site_name" content="Gilles Vermeulen - Creative Developer">
   <meta property="og:locale" content="nl_BE">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://gillesvermeulen.github.io/">
 
   <link rel="stylesheet" href="style.css" inline>
 </head>
