Added eye twitch and simplified some css animation code

--- a/src/index.html
+++ b/src/index.html
@@ -180,8 +180,8 @@
     </div>
     <div id="face">
       <div id="eyes">
-        <div id="eye-left" class="eye"><div class="eyeball"></div><div class="pupil"><div class="pupil__inner"></div></div><div class="eyelid"></div><div class="closed-eyelids"></div><div class="eyebrow"></div></div>
-        <div id="eye-right" class="eye"><div class="eyeball"></div><div class="pupil"><div class="pupil__inner"></div></div><div class="eyelid"></div><div class="closed-eyelids"></div><div class="eyebrow"></div></div>
+        <div id="eye-left" class="eye"><div class="eyeball"></div><div class="pupil"><div class="pupil__inner"></div></div><div class="eyelid eyelid--top"></div><div class="eyelid eyelid--bottom"></div><div class="closed-eyelids"></div><div class="eyebrow"><div class="eyebrow__inner"></div></div></div>
+        <div id="eye-right" class="eye"><div class="eyeball"></div><div class="pupil"><div class="pupil__inner"></div></div><div class="eyelid eyelid--top"></div><div class="eyelid eyelid--bottom"></div><div class="closed-eyelids"></div><div class="eyebrow"><div class="eyebrow__inner"></div></div></div>
       </div>
     </div>
   </div>
