--- a/src/index.html
+++ b/src/index.html
@@ -18,22 +18,22 @@
   <title>Gilles Vermeulen - Creative Developer</title>
 
   <meta name="description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
-  <meta name="image" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta name="image" content="https://gillesvermeulen.be/static/imgs/social_image.png">
   <meta itemprop="name" content="Gilles Vermeulen - Creative Developer">
   <meta itemprop="description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
-  <meta itemprop="image" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta itemprop="image" content="https://gillesvermeulen.be/static/imgs/social_image.png">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Gilles Vermeulen - Creative Developer">
   <meta name="twitter:description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
   <meta name="twitter:creator" content="@GillesVermeulen">
-  <meta name="twitter:image:src" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta name="twitter:image:src" content="https://gillesvermeulen.be/static/imgs/social_image.png">
   <meta property="og:title" content="Gilles Vermeulen - Creative Developer">
   <meta property="og:description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
-  <meta property="og:image" content="https://gillesvermeulen.github.io/static/imgs/social_image.png">
+  <meta property="og:image" content="https://gillesvermeulen.be/static/imgs/social_image.png">
   <meta property="og:site_name" content="Gilles Vermeulen - Creative Developer">
   <meta property="og:locale" content="nl_BE">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://gillesvermeulen.github.io/">
+  <meta property="og:url" content="https://gillesvermeulen.be/">
 
   <link rel="stylesheet" href="style.css" inline>
 </head>
