Removed unnecessary anchor tags

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     
     <div id="projects">
       <div class="project">
-        <div class="image-container"><a href="#"><img src="static/imgs/projects/boeva.gif" alt="Boeva the Game" /></a></div>
+        <div class="image-container"><img src="static/imgs/projects/boeva.gif" alt="Boeva the Game" /></div>
         <h2 class="title">Boeva the Game</h2>
         <div class="description-container">
           <div class="description">
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="project">
-        <div class="image-container"><a href="#"><img src="static/imgs/projects/kaatje.gif" alt="Kaatje van Ketnet" /></a></div>
+        <div class="image-container"><img src="static/imgs/projects/kaatje.gif" alt="Kaatje van Ketnet" /></div>
         <h2 class="title">Kaatje van Ketnet</h2>
         <div class="description-container">
           <div class="description">
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="project">
-        <div class="image-container"><a href="#"><img src="static/imgs/projects/staarwaars.gif" alt="HBvL Staar Waars" /></a></div>
+        <div class="image-container"><img src="static/imgs/projects/staarwaars.gif" alt="HBvL Staar Waars" /></div>
         <h2 class="title">HBvL<br>Staar Waars</h2>
         <div class="description-container">
           <div class="description">
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div class="project">
-        <div class="image-container"><a href="#"><img src="static/imgs/projects/interactievefictie.gif" alt="Interactieve Fictie" /></a></div>
+        <div class="image-container"><img src="static/imgs/projects/interactievefictie.gif" alt="Interactieve Fictie" /></div>
         <h2 class="title">Interactieve Fictie</h2>
         <div class="description-container">
           <div class="description">
@@ -143,7 +143,7 @@
         </div>
       </div>
       <div class="project">
-        <div class="image-container"><a href="#"><img src="static/imgs/projects/philippaerts.gif" alt="Philippaerts" /></a></div>
+        <div class="image-container"><img src="static/imgs/projects/philippaerts.gif" alt="Philippaerts" /></div>
         <h2 class="title">Philippaerts</h2>
         <div class="description-container">
           <div class="description">
