Added (social) links. Linked e-mail.

--- a/src/index.html
+++ b/src/index.html
@@ -168,8 +168,13 @@
       <div class="inner">
         <h2>
           Contacteer mij<br>
-          &#103;&#105;&#108;&#108;&#101;&#115;&#118;&#101;&#114;&#109;&#101;&#117;&#108;&#101;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;
+          <a href="mailto:&#103;&#105;&#108;&#108;&#101;&#115;&#118;&#101;&#114;&#109;&#101;&#117;&#108;&#101;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#103;&#105;&#108;&#108;&#101;&#115;&#118;&#101;&#114;&#109;&#101;&#117;&#108;&#101;&#110;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
         </h2>
+        <div class="links">
+          <a class="link link--youtube" href="https://www.youtube.com/gillesvermeulen">Gilles Vermeulen - Youtube</a>
+          <a class="link link--instagram" href="https://www.instagram.com/gillesvermeulen/">Gilles Vermeulen - Instagram</a>
+          <a class="link link--graphics" href="http://kong.fo/">Kong Fo - Grafisch werk</a>
+        </div>
       </div>
     </div>
   </div>
