Added thumbnail meta tag and structured JSON-LD schema data

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 
   <meta name="description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
   <meta name="image" content="https://gillesvermeulen.be/static/imgs/social_image.png">
+  <meta name="thumbnail" content="https://gillesvermeulen.be/static/imgs/social_image.png" />
   <meta itemprop="name" content="Gilles Vermeulen - Creative Developer">
   <meta itemprop="description" content="Een selectie van werken uit het portfolio van Gilles Vermeulen, creative developer.">
   <meta itemprop="image" content="https://gillesvermeulen.be/static/imgs/social_image.png">
@@ -203,6 +204,24 @@
   </svg>
 
   <script src="script.js" inline></script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "image": "https://gillesvermeulen.be/static/imgs/gilles_vermeulen.png",
+      "jobTitle": "Creative Developer",
+      "name": "Gilles Vermeulen",
+      "alumniOf": "KHLim",
+      "nationality": "Belgian",
+      "url": "https://gillesvermeulen.be",
+      "sameAs" : [
+        "https://www.youtube.com/gillesvermeulen",
+        "https://www.instagram.com/gillesvermeulen/",
+        "http://kong.fo/"
+      ]
+    }
+  </script>
 
   <script>
     if (window.location.search == '?debug') {
